# SimpleLogger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  sonarcloud.yml
Doxygen html/: _logger_8h.html  _logger_8h_source.html  annotated.html  class_logger-members.html  class_logger.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_eval.html  index.html  structs_output_manager-members.html  structs_output_manager.html  structs_time-members.html  structs_time.html
Doxygen html/search/: all_1.js  all_2.js  all_3.js  all_7.js  all_8.js  all_b.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js
src/: CMakeLists.txt  ClassExamples.cpp  ClassExamples.h  main.cpp
src/Logger/: CMakeLists.txt  Logger.cpp
src/Logger/include/: Logger.h
tests/: CMakeLists.txt  LoggerTests.cpp
